# chunkpdf

./: .gitignore  README.md  chunkpdf.py  install.sh  pyproject.toml
.beads/: .env  config.yaml  metadata.json
src/chunkpdf/: __init__.py  __main__.py
tests/: conftest.py  test_cli_integration.py  test_gif.py  test_max_size.py
