[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chunkpdf"
version = "0.1.0"
description = "Convert a PDF into one low-quality PNG per page for LLM layout review."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymupdf>=1.24",
]

[project.scripts]
chunkpdf = "chunkpdf:main"

[tool.hatch.build.targets.wheel]
packages = ["src/chunkpdf"]
